Change profile userName route.
