# src/main/java/com/argentbank/argentbankApi/Utils/ResponseUtil.java
@@ -1,8 +1,9 @@
 package com.argentbank.argentbankApi.Utils;
 
-import com.argentbank.argentbankApi.model.ApiResponse;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+
+import com.argentbank.argentbankApi.model.response.ApiResponse;
 
 public class ResponseUtil {
     public static ResponseEntity<ApiResponse> buildResponse(HttpStatus httpStatus, String message, Object data) {
