# src/main/java/com/argentbank/argentbankApi/model/request/ChangeProfileRequest.java
@@ -1,0 +1,16 @@
+package com.argentbank.argentbankApi.model.request;
+
+public class ChangeProfileRequest {
+    private String userName;
+
+    ChangeProfileRequest() {
+    }
+
+    public void setUserName(String userName) {
+        this.userName = userName;
+    }
+
+    public String getUserName() {
+        return userName;
+    }
+}
